@@ -74,4 +74,7 @@ public class ApplicationMetricsConstants {
       "YARN_APPLICATION_LATEST_APP_ATTEMPT";
 
   public static final String APP_TAGS_INFO = "YARN_APPLICATION_TAGS";
+
+  public static final String UNMANAGED_APPLICATION_ENTITY_INFO =
+      "YARN_APPLICATION_UNMANAGED_APPLICATION";
 }
