@@ -32,6 +32,7 @@ public class ApplicationCreatedEvent extends
   private String queue;
   private long submittedTime;
   private Set<String> appTags;
+  private boolean unmanagedApplication;
 
   public ApplicationCreatedEvent(ApplicationId appId,
       String name,
@@ -40,7 +41,8 @@ public class ApplicationCreatedEvent extends
       String queue,
       long submittedTime,
       long createdTime,
-      Set<String> appTags) {
+      Set<String> appTags,
+      boolean unmanagedApplication) {
     super(SystemMetricsEventType.APP_CREATED, createdTime);
     this.appId = appId;
     this.name = name;
@@ -49,6 +51,7 @@ public class ApplicationCreatedEvent extends
     this.queue = queue;
     this.submittedTime = submittedTime;
     this.appTags = appTags;
+    this.unmanagedApplication = unmanagedApplication;
   }
 
   @Override
@@ -82,5 +85,9 @@ public class ApplicationCreatedEvent extends
 
   public Set<String> getAppTags() {
     return appTags;
+  }
+
+  public boolean isUnmanagedApp() {
+    return unmanagedApplication;
   }
 }
