@@ -96,6 +96,7 @@ public class AppInfo {
   protected List<ResourceRequest> resourceRequests;
 
   protected LogAggregationStatus logAggregationStatus;
+  protected boolean unmanagedApplication;
 
   public AppInfo() {
   } // JAXB needs this
@@ -183,6 +184,8 @@ public class AppInfo {
           appMetrics.getResourcePreempted().getVirtualCores();
       memorySeconds = appMetrics.getMemorySeconds();
       vcoreSeconds = appMetrics.getVcoreSeconds();
+      unmanagedApplication =
+          app.getApplicationSubmissionContext().getUnmanagedAM();
     }
   }
 
@@ -320,5 +323,9 @@ public class AppInfo {
 
   public LogAggregationStatus getLogAggregationStatus() {
     return this.logAggregationStatus;
+  }
+
+  public boolean isUnmanagedApp() {
+    return unmanagedApplication;
   }
 }
