@@ -1380,7 +1380,8 @@ Response Body:
 	  "applicationType" : "MAPREDUCE",
 	  "applicationTags" : ""
           "memorySeconds" : 151730,
-          "vcoreSeconds" : 103
+          "vcoreSeconds" : 103,
+          "unmanagedApplication":"false"
        },
        {
           "finishedTime" : 1326815789546,
@@ -1406,7 +1407,8 @@ Response Body:
 	  "applicationTags" : "tag1"
           "memorySeconds" : 640064,
           "vcoreSeconds" : 442
-       } 
+          "unmanagedApplication":"false"
+       }
     ]
   }
 }
@@ -1455,6 +1457,7 @@ Response Body:
     <runningContainers>0</runningContainers>
     <memorySeconds>151730</memorySeconds>
     <vcoreSeconds>103</vcoreSeconds>
+    <unmanagedApplication>false</unmanagedApplication>
   </app>
   <app>
     <id>application_1326815542473_0002</id>
@@ -1480,6 +1483,7 @@ Response Body:
     <runningContainers>0</runningContainers>
     <memorySeconds>640064</memorySeconds>
     <vcoreSeconds>442</vcoreSeconds>
+    <unmanagedApplication>false</unmanagedApplication>
   </app>
 </apps>
 ```
@@ -1639,6 +1643,7 @@ Note that depending on security settings a user might not be able to see all the
 | runningContainers | int | The number of containers currently running for the application |
 | memorySeconds | long | The amount of memory the application has allocated (megabyte-seconds) |
 | vcoreSeconds | long | The amount of CPU resources the application has allocated (virtual core-seconds) |
+| unmanagedApplication | boolean | Is the application unmanaged. |
 
 ### Response Examples
 
@@ -1678,7 +1683,8 @@ Response Body:
       "trackingUrl" : "http://host.domain.com:8088/proxy/application_1326821518301_0005/jobhistory/job/job_1326821518301_5_5",
       "queue" : "a1",
       "memorySeconds" : 151730,
-      "vcoreSeconds" : 103
+      "vcoreSeconds" : 103,
+      "unmanagedApplication":"false"
    }
 }
 ```
@@ -1720,6 +1726,7 @@ Response Body:
   <amHostHttpAddress>host.domain.com:8042</amHostHttpAddress>
   <memorySeconds>151730</memorySeconds>
   <vcoreSeconds>103</vcoreSeconds>
+  <unmanagedApplication>false</unmanagedApplication>
 </app>
 ```
 
