@@ -1087,7 +1087,8 @@ Response Body:
           "submittedTime":1430425001004,
           "startedTime":1430425001004,
           "finishedTime":1430425008861,
-          "elapsedTime":7857},
+          "elapsedTime":7857,
+          "unmanagedApplication":"false"},
           {
           "appId":"application_1430424020775_0003",
           "currentAppAttemptId":"appattempt_1430424020775_0003_000001",
@@ -1106,7 +1107,8 @@ Response Body:
           "submittedTime":1430424956650,
           "startedTime":1430424956650,
           "finishedTime":1430424963907,
-          "elapsedTime":7257},
+          "elapsedTime":7257,
+          "unmanagedApplication":"false"},
           {
           "appId":"application_1430424020775_0002",
           "currentAppAttemptId":"appattempt_1430424020775_0002_000001",
@@ -1125,7 +1127,8 @@ Response Body:
           "submittedTime":1430424769395,
           "startedTime":1430424769395,
           "finishedTime":1430424776594,
-          "elapsedTime":7199},
+          "elapsedTime":7199,
+          "unmanagedApplication":"false"},
           {
           "appId":"application_1430424020775_0001",
           "currentAppAttemptId":"appattempt_1430424020775_0001_000001",
@@ -1145,7 +1148,8 @@ Response Body:
           "startedTime":1430424072153,
           "finishedTime":1430424776594,
           "elapsedTime":18344,
-          "applicationTags":"mrapplication,ta-example"
+          "applicationTags":"mrapplication,ta-example",
+          "unmanagedApplication":"false"
           }
       ]
     }
@@ -1187,6 +1191,7 @@ Response Body:
         <startedTime>1430425001004</startedTime>
         <finishedTime>1430425008861</finishedTime>
         <elapsedTime>7857</elapsedTime>
+        <unmanagedApplication>false</unmanagedApplication>
       </app>
       <app>
         <appId>application_1430424020775_0003</appId>
@@ -1207,6 +1212,7 @@ Response Body:
         <startedTime>1430424956650</startedTime>
         <finishedTime>1430424963907</finishedTime>
         <elapsedTime>7257</elapsedTime>
+        <unmanagedApplication>false</unmanagedApplication>
       </app>
       <app>
         <appId>application_1430424020775_0002</appId>
@@ -1227,6 +1233,7 @@ Response Body:
         <startedTime>1430424769395</startedTime>
         <finishedTime>1430424776594</finishedTime>
         <elapsedTime>7199</elapsedTime>
+        <unmanagedApplication>false</unmanagedApplication>
       </app>
       <app>
         <appId>application_1430424020775_0001</appId>
@@ -1248,6 +1255,7 @@ Response Body:
         <finishedTime>1430424072153</finishedTime>
         <elapsedTime>18344</elapsedTime>
         <applicationTags>mrapplication,ta-example</applicationTags>
+        <unmanagedApplication>false</unmanagedApplication>
       </app>
     </apps>
 
@@ -1298,6 +1306,7 @@ None
 | `host` | string | The host of the ApplicationMaster |
 | `rpcPort` | int | The RPC port of the ApplicationMaster; zero if no IPC service declared |
 | `applicationTags` | string | The application tags. |
+| `unmanagedApplication` | boolean | Is the application unmanaged. |
 
 ### Response Examples:
 
@@ -1334,7 +1343,8 @@ Response Body:
       "startedTime": 1430424053809,
       "finishedTime": 1430424072153,
       "elapsedTime": 18344,
-      "applicationTags": mrapplication,tag-example
+      "applicationTags": mrapplication,tag-example,
+      "unmanagedApplication":"false"
     }
 
 #### XML response
@@ -1373,6 +1383,7 @@ Response Body:
        <finishedTime>1430424072153</finishedTime>
        <elapsedTime>18344</elapsedTime>
        <applicationTags>mrapplication,ta-example</applicationTags>
+       <unmanagedApplication>false</unmanagedApplication>
      </app>
 
 ## <a name="REST_API_APPLICATION_ATTEMPT_LIST"></a>Application Attempt List
